--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "https://infilmes.herokuapp.com/",
   "display": "standalone",
   "theme_color": "#0359a6",
   "background_color": "#f1f1f1"
